# Loop-closure-confirmation-with-edge

./: CMakeLists.txt  Optimizer.cpp  Optimizer.h  Utils.cpp  Utils.h  loop_closure_confirm_with_canny.cpp
